--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,7 @@
         "role":  "Developer"
     }],
     "require": {
-        "php": ">= 5.3",
-        "sweikenb/php-library": "dev-master"
+        "php": ">= 5.3"
     },
     "bin": ["./php-benchmark"],
     "autoload": {
