--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,9 @@
         "symfony/console": ">=2.7.6",
         "victorjonsson/markdowndocs": "dev-master"
     },
+    "require-dev" : {
+        "phpunit/phpunit": "3.7.23"
+    },
     "bin": ["./php-benchmark"],
     "autoload": {
         "psr-0": {"PHPBenchmark": "lib/"}
