--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     "require": {
         "php": ">= 5.3",
         "symfony/console": ">=2.7.6",
-        "victorjonsson/markdowndocs": "dev-master"
+        "victorjonsson/markdowndocs": ">=1.2.0"
     },
     "require-dev" : {
         "phpunit/phpunit": "3.7.23"
