--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "description": "Easy to use benchmark toolkit for your PHP-application. This library contains classes for comparing algorithms as well as benchmarking application responses",
     "keywords":    ["test", "benchmark", "performance", "profiler"],
     "homepage":    "http://victorjonsson.github.com/PHP-Benchmark/",
-    "version":      "1.0.2",
+    "version":      "1.1.0",
     "license":      "MIT",
     "authors": [{
         "name":  "Victor Jonsson",
@@ -12,9 +12,10 @@
         "role":  "Developer"
     }],
     "require": {
-        "php": ">= 5.3",
+        "php": ">=5.4.0",
         "symfony/console": ">=2.7.6",
-        "victorjonsson/markdowndocs": "dev-master"
+        "victorjonsson/markdowndocs": "dev-master",
+        "league/event": "^2.1"
     },
     "require-dev" : {
         "phpunit/phpunit": "3.7.23"
